# medllm

./: .gitignore  ARCHITECTURE_EXTENSION_GUIDE.md  CHANGELOG.md  CHANGES_FOR_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEVICE_SELECTION_GUIDE.md  MANIFEST.in  PACKAGE_SUMMARY.md  PYPI_DEPLOYMENT_INSTRUCTIONS.md  QUICKSTART.md  README.md  TODO  pyproject.toml  requirements.txt  setup.py  test_api_config.yaml  test_api_direct.py  test_device_manager.py  test_generation.py  test_integration.py
.github/workflows/: ci.yml  publish-to-pypi.yml
configs/: __init__.py  train_config.py
data/: __init__.py
data/parsers/: __init__.py  medquad_parser.py  text_formatter.py
data/processed/: dataset_stats.json
examples/: device_selection_examples.py
gptmed/: __init__.py  api.py  conversation_api.py
gptmed/configs/: config_loader.py  configs.py
gptmed/data/: __init__.py
gptmed/data/parsers/: medquad_parser.py  text_formatter.py
gptmed/data/tokenized/: metadata.json
gptmed/data_preparation/text/: pipeline.py  tokenize_jsonl.py
gptmed/framework/: __init__.py
gptmed/framework/cli/: __init__.py  startproject.py
gptmed/framework/conversation/model/architecture/: decoder_block.py
gptmed/framework/conversation/training/: data_loader.py  train.py
gptmed/inference/: decoding_utils.py  generation_config.py  generator.py  sampling.py
gptmed/model/: __init__.py
gptmed/model/architecture/: feedforward.py  transformer.py
gptmed/model/configs/: __init__.py
gptmed/observability/: metrics_tracker.py  redis_metrics_storage.py
gptmed/services/: __init__.py  device_manager.py  training_service.py
gptmed/tokenizer/: __init__.py  tokenize_data.py  train_tokenizer.py
gptmed/tokenizer/configs/: __init__.py
gptmed/training/: train.py  trainer.py
gptmed/utils/: __init__.py  checkpoints.py  logging.py
inference/: decoding_utils.py  generation_config.py  generator.py  sampling.py
model/: __init__.py
model/architecture/: __init__.py  attention.py  decoder_block.py  embeddings.py  feedforward.py  transformer.py
model/configs/: __init__.py  model_config.py
tests/: test_basic.py
tokenizer/: __init__.py  medquad_tokenizer.model  medquad_tokenizer.vocab  tokenize_data.py  train_tokenizer.py
training/: dataset.py  train.py  trainer.py  utils.py
utils/: checkpoints.py  logging.py
