[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptmed"
version = "0.5.0"
description = "A lightweight GPT-based language model framework for training custom question-answering models on any domain"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["nlp", "language-model", "transformer", "gpt", "pytorch", "qa", "question-answering", "training", "deep-learning", "custom-model"]

authors=[
{name = "Sanjog Sigdel", email = "sigdelsanjog@gmail.com"},
{name = "Sanjog Sigdel", email = "sanjog.sigdel@ku.edu.np"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
training = [
    "tensorboard>=2.10.0",
    "wandb>=0.13.0",
]
visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
xai = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "captum>=0.6.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sigdelsanjog/gptmed"
Documentation = "https://github.com/sigdelsanjog/gptmed#readme"
Repository = "https://github.com/sigdelsanjog/gptmed"
Issues = "https://github.com/sigdelsanjog/gptmed/issues"

[project.scripts]
gptmed-generate = "gptmed.inference.generator:main"
gptmed-train = "gptmed.training.train:main"

[tool.setuptools]
packages = [
    "gptmed",
    "gptmed.model",
    "gptmed.model.architecture",
    "gptmed.model.configs",
    "gptmed.inference",
    "gptmed.training",
    "gptmed.services",
    "gptmed.utils",
    "gptmed.configs",
    "gptmed.data",
    "gptmed.data.parsers",
    "gptmed.tokenizer",
    "gptmed.observability",
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.txt"]
# Include pre-trained tokenizer model and vocabulary (~240KB total)
# These are required for text tokenization without needing to retrain
"llm_med.tokenizer" = ["*.model", "*.vocab"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
